<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen"
    tools:context=".league.League">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rosters"
        android:layout_width="410dp"
        android:layout_height="444dp"
        android:background="#FFFFFF"
        android:paddingTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rosters_title"
        app:layout_constraintVertical_bias="1.0" />

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/matchups"-->
    <!--        android:layout_width="139dp"-->
    <!--        android:layout_height="42dp"-->
    <!--        android:layout_marginEnd="108dp"-->
    <!--        android:background="@drawable/rounded_button"-->
    <!--        android:backgroundTint="#00FF89"-->
    <!--        android:onClick="onClickMatchup"-->
    <!--        android:text="@string/matchups"-->
    <!--        android:textColor="#37033D"-->
    <!--        android:textSize="16sp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/rosters"-->

    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.176"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.22" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/matchups"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginEnd="79dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#00FF89"
        android:onClick="onClickMatchup"
        android:text="@string/matchups"
        android:textColor="#37033D"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/draft"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <TextView
        android:id="@+id/rosters_title"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="115dp"
        android:background="#00E87A"
        android:text="@string/rosters"
        android:textAlignment="viewStart"
        android:textColor="#37033D"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rosters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#00FF89"
        android:onClick="getPreviousLeagues"
        android:text="@string/history"
        android:textColor="#37033D"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rosters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <ProgressBar
        android:id="@+id/circularLeague"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/draft"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#00FF89"
        android:onClick="onClickDraft"
        android:text="@string/draft"
        android:textColor="#37033D"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rosters_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/standings"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#00FF89"
        android:onClick="loadStandings"
        android:text="@string/standings"
        android:textColor="#37033D"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/rosters_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toEndOf="@+id/draft"
        app:layout_constraintTop_toBottomOf="@+id/history"
        app:layout_constraintVertical_bias="0.404" />
    " />
</androidx.constraintlayout.widget.ConstraintLayout>