<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

            <ImageView
                android:id="@+id/userimg2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/userimg1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/versus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="25dp"
            android:height="29dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/VS"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teamName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:height="28dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/TeamName1"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teamName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:height="28dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/TeamName2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="110dp"
            android:layout_marginStart="30dp"
            android:height="28dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/_0_0"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal"/>

            <TextView
                android:id="@+id/points2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="30dp"
                android:height="28dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/_0_0"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />


        <!--                <ProgressBar-->
<!--                    android:id="@+id/progressBar2"-->
<!--                    style="?android:attr/progressBarStyleHorizontal"-->
<!--                    android:layout_width="75dp"-->
<!--                    android:layout_height="11dp"-->
<!--                    app:layout_constraintBottom_toTopOf="@+id/points2"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.5"-->
<!--                    app:layout_constraintStart_toEndOf="@+id/progressBar1"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/teamName2" />-->

<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar1"-->
<!--                style="?android:attr/progressBarStyleHorizontal"-->
<!--                android:layout_width="74dp"-->
<!--                android:layout_height="10dp"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/points1"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.137"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/teamName1" />-->

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
